were disabled buttons borders on click, were move link texts from css to the tag,on gulp file add all tasks, fix broken UI on width is 990 - 1200, were fix align footer on small screens

--- a/1. HTML-CSS/1.4. BEM/sass/blocks/_footer.scss
+++ b/1. HTML-CSS/1.4. BEM/sass/blocks/_footer.scss
@@ -21,6 +21,7 @@
     @include respond-to($md, $sm, $es) {
       height: auto;
       flex-direction: column;
+      width: auto;
     }
   }
 
@@ -61,6 +62,7 @@
       font-family: $secondaryFont;
       font-size: 13px;
       color: #e7e7e7;
+      outline: none;
     }
 
     &--marker:before {
@@ -90,6 +92,7 @@
       line-height: 24px;
       color: $secondaryColor;
       text-decoration: none;
+      outline: none;
     }
 
     &--images,
@@ -100,6 +103,7 @@
       line-height: 24px;
       color: $primaryFontColor;
       text-decoration: none;
+      outline: none;
     }
 
     &--images:after,
